--- a/index.css
+++ b/index.css
@@ -3,14 +3,21 @@ html, body {
 }
 
 header {
-    
-    
-    background-color: F55A5A;
-    color: FFFFFF;
+    background: #F55A5A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    height: 55px;
 }
 
-nav {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+header > img {
+    width: 24px;
+    margin-right: 7px;
+}
+
+header > h1 {
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-family: Inter, sans-serif;
 }
